--- a/src/layouts/pageLayout/pageLayout.scss
+++ b/src/layouts/pageLayout/pageLayout.scss
@@ -7,6 +7,7 @@
   }
 
   @include mobile-breakpoint {
+    margin-top: to-rem(60);
     padding: 0 to-rem(30);
   }
 
